--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "extends": ["standard", "prettier"],
   "plugins": ["import"],
   "rules": {
+    "rules": {
+      "no-unused-vars": "warn" // Change "error" to "warn"
+    },
     "import/order": [
       "error",
       {
