--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
     "styled-components": "^6.1.14"
   },
