--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
   "plugins": ["import"],
   "rules": {
     "rules": {
-      "no-unused-vars": "warn" // Change "error" to "warn"
+      "no-unused-vars": "warn", // Change "error" to "warn"
+      "react-prop-types": "off" // Disable prop-types
     },
     "import/order": [
       "error",
