--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
+    "recharts": "^2.15.3",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
